# auto-deployer

./: .env.example  README.md  docker-compose.yml
app/: Dockerfile  database.py  deployer.py  main.py  models.py  pyproject.toml  worker.py
app/routers/: deployments.py  webhooks.py
app/static/: mini-railway-dashboard.html
postgres/: init.sql
prometheus/: prometheus.yml
