[project]
name = "webhook-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "pydantic-settings>=2.0",
    "arq>=0.28.0",
    "asyncssh>=2.22.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
